--- a/destinations.html
+++ b/destinations.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>صفحة الوجهات السياحية</title>
-     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/ajax.js"></script>
+     <link rel="stylesheet" href="style.css">
+    <script src="ajax.js"></script>
 
 </head>
 <body>
@@ -36,4 +36,5 @@
     <p>© 2025</p>
 </footer>
 </body>
+
 </html>
