--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>الدليل السياحي الذكي - قطر</title>
-    <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+  <script src="main.js" defer></script>
 </head>
-<body onload="showAlert();" function form="./js/main.js">
+<body onload="showAlert();" function form="main.js">
 
   <header>
     <h1>الدليل السياحي الذكي في قطر</h1>
@@ -19,10 +19,10 @@
       <a href="contact.html">تواصل معنا</a>
     </nav>
   </header>
-<button onclick="theme();" function form="./js/main.js">change to darck mood</button> 
+<button onclick="theme();" function form="main.js">change to darck mood</button> 
 <section class="hero">
       <video controls>
-        <source src="./videos/qatar.mp4" type="video/mp4" >
+        <source src="qatar.mp4" type="video/mp4" >
         متصفحك لا يدعم تشغيل الفيديو
       </video>
     </section>
@@ -39,7 +39,7 @@
       <div class="box">
         <h3>متاحف فنية</h3>
         <p>متحف الفن الإسلامي يضم واحدة من أروع مجموعات الفن الإسلامي في العالم.</p>
-        <img src="./images/islamic-art-museum.jpg" ><br>
+        <img src="islamic-art-museum.jpg" ><br>
         <a href="destinations.html">اقرا المزيد</a>
       </div>
 
@@ -47,14 +47,14 @@
       <div class="box">
         <h3>المطاعم و المقاهي</h3>
         <p>مطعم عصري يقدم المشاوي والكباب بتقديم مبتكر ونكهات مميزة.</p>
-        <img src="./images/جلو كباب.jpg"><br>
+        <img src="جلو كباب.jpg"><br>
         <a href="destinations.html">اقراالمزيد</a>
       </div>
 
       <div class="box">
         <h3>الاماكن الترفهية</h3>
         <p>فاندوم مول يقدم تجربة تسوق فاخرة على الطراز الفرنسي.</p>
-        <img src="./images/vendome-mall.jpg"><br>
+        <img src="vendome-mall.jpg"><br>
         <a href="destinations.html">اقراالمزيد</a>
       </div>
     </div>
@@ -65,4 +65,5 @@
 </footer>
 
 </body>
+
 </html>
