--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <button onclick="theme();" function form="main.js">change to darck mood</button> 
 <section class="hero">
       <video controls>
-        <source src="qatar.mp4" type="video/mp4" >
+        <source src="qatar.MP4" type="video/mp4" >
         متصفحك لا يدعم تشغيل الفيديو
       </video>
     </section>
@@ -67,3 +67,4 @@
 </body>
 
 </html>
+
